<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_marginBottom="10dp"
    android:background="@color/app_ui_background_color"
    android:gravity="center"
    android:orientation="horizontal"
    tools:showIn="@layout/fragment_edit_about_info">

    <Button
        android:id="@+id/btnCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/generic_cancel_button_title"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tvViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/edit_about_info_view_title"
        android:textColor="@color/app_light_text_color"
        android:textSize="22sp"/>

    <Button
        android:id="@+id/btnNext"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/generic_next_button_title"
        android:textColor="@android:color/white"
        android:textSize="15sp"/>

</LinearLayout>

    