<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_ui_background_color"
              android:orientation="vertical"
              android:padding="@dimen/app_view_standard_padding"
              tools:context="com.rhlabs.circle.fragments.VerifyPhoneFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/verify_phone_title"
        android:textColor="@color/app_light_text_color"
        android:textSize="28sp"/>

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="20dp"
        android:text="@string/verify_phone_instruction_text"
        android:textColor="@color/app_light_text_color"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:hint="@string/phone_number_hint_text">

            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:hint="@string/phone_number_hint_text"
                android:inputType="phone"
                android:textColor="@color/app_light_text_color"
                android:textSize="20sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnResendCode"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/tilPhoneNumber"
            android:layout_toRightOf="@+id/tilPhoneNumber"
            android:background="@android:color/transparent"
            android:fontFamily="sans-serif-light"
            android:text="@string/resend_button_text"
            android:textAllCaps="false"
            android:textColor="@color/app_tint_color"/>
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilVerifyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:hint="@string/phone_verification_code_hint_text">

        <EditText
            android:id="@+id/etVerifyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/phone_verification_code_hint_text"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/app_light_text_color"
            android:textSize="20sp"/>

    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSendVerifyCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/verify_phone_button_text"
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/pbProgressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btnSendVerifyCode"
            android:layout_toRightOf="@+id/btnSendVerifyCode"
            android:padding="10dp"/>

    </RelativeLayout>

</LinearLayout>
