<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/app_ui_background_color"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.rhlabs.circle.activities.HomelessActivity">

    <ImageView
        android:id="@+id/appIconImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/tvBetaText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_app_icon"/>

    <TextView
        android:id="@+id/tvBetaText"
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/private_beta_info_text"
        android:textColor="@color/app_light_text_color"/>

    <TextView
        android:id="@+id/tvConfirmationText"
        style="@android:style/TextAppearance.Holo.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRequestAccess"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/request_access_confirmation_text"
        android:textColor="@color/app_light_text_color"/>

    <ProgressBar
        android:id="@+id/pbProgressBar"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnRequestAccess"
        android:layout_centerHorizontal="true"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnRequestAccess"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btnTryAgain"
        android:layout_marginBottom="16dp"
        android:background="@color/app_tint_color"
        android:onClick="onRequestAccessButtonClicked"
        android:text="@string/request_access_button_text"
        android:textColor="@color/app_light_text_color"/>

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:onClick="onTryAgainButtonClicked"
        android:text="@string/try_again_button_title"
        android:textColor="@color/app_tint_color"/>


</RelativeLayout>
