<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_ui_background_color"
              android:orientation="vertical"
              tools:context="com.rhlabs.circle.fragments.EditAboutInfoFragment">

    <include layout="@layout/edit_views_custom_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_horizontal"
            android:text="@string/edit_about_instruction_text"
            android:textColor="@color/app_light_text_color"
            android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/bio_field_hint_text">

            <EditText
                android:id="@+id/etBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="san-serif"
                android:hint="@string/bio_field_hint_text"
                android:inputType="textCapSentences|textAutoCorrect"
                android:singleLine="false"
                android:textColor="@color/app_light_text_color"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname_field_hint_text">

            <EditText
                android:id="@+id/etNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_field_hint_text"
                android:singleLine="true"
                android:textColor="@color/app_light_text_color"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>
